fixed alignment

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=Patua+One|Raleway:600');
 @import './base/layout/layout.scss';
 @import './base/font/typography.scss';
 @import './base/color/color.scss';
@@ -9,9 +8,8 @@ html {
 
   .container {
     display: flex;
-    flex-direction: column;
     justify-content: center;
-    align-self: center;
+    align-items: center;
 
     width: 100%;
     height: 100vh;
@@ -24,47 +22,91 @@ html {
     background: var(--color-black);
     color: var(--color-white);
 
-    > * {
-      margin-top: var(--spacer-sm);
-    }
-
-    .home__title {
-      margin-bottom: 0;
-      font-size: var(--spacer-xl);
-      font-weight: var(--font-weight-bold);
-      letter-spacing: 3px;
-    }
-    .home__subtitle {
-      margin-bottom: 0;
-      font-size: var(--spacer-lg);
-      font-weight: var(--font-weight-normal);
-      letter-spacing: 2px;
-    }
-    .nav__links {
+    .home__container {
       display: flex;
+      flex-wrap: wrap;
 
-      > *:not(:first-child) {
-        margin-left: var(--spacer-lg);
-      }
+      .home__content {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
 
-      .nav__link-item {
-        color: var(--color-link);
-        font-size: var(--font-size-title4);
-        font-weight: var(--font-weight-bold);
-        letter-spacing: 2px;
-        text-decoration: none;
-
-        span {
-          padding-bottom: var(--spacer-xs);
-
-          &:hover {
-            color: var(--color-white);
-            border-bottom: var(--border-width-separator) solid var(--color-white);
+        > * {
+          margin-top: var(--spacer-sm);
+        }
+        .home__content-intro {
+          text-align: left;
+          margin-bottom: 0;
+          font-size: var(--spacer-lg);
+          font-weight: var(--font-weight-normal);
+          letter-spacing: 2px;
+          
+          @media only screen and (max-width: 600px) {
+            font-size: var(--spacer-ml);
           }
-        }      
+        }
+        .home__content-title {
+          margin-bottom: 0;
+          font-size: var(--spacer-xl);
+          font-weight: var(--font-weight-bold);
+          letter-spacing: 3px;
+
+          @media only screen and (max-width: 600px) {
+            font-size: var(--spacer-lg);
+          }
+        }
+        .home__content-subtitle {
+          margin-bottom: 0;
+          font-size: var(--spacer-lg);
+          font-weight: var(--font-weight-normal);
+          letter-spacing: 2px;
+
+          @media only screen and (max-width: 600px) {
+            font-size: var(--spacer-ml);
+          }
+        }
+        .home__content-nav__menu {
+          display: flex;
+    
+          > *:not(:first-child) {
+            margin-left: var(--spacer-lg);
+          }
+  
+          .nav__menu-item {
+            color: var(--color-link);
+            font-size: var(--font-size-title4);
+            font-weight: var(--font-weight-bold);
+            letter-spacing: 2px;
+            text-decoration: none;
+    
+            span {
+              padding-bottom: var(--spacer-xs);
+    
+              &:hover {
+                color: var(--color-white);
+                border-bottom: var(--border-width-separator) solid var(--color-white);
+              }
+            }      
+          }
+        }
+      }
+      .home__profile {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        width: 14rem;
+        height: 14rem;
+        margin: var(--spacer-window);
+        
+        img {
+          display: block;
+          width: 100%;
+          height: 100%;
+          
+          border-radius: 100%;
+        }
       }
     }
-
-
   }
 }
